# src/controller/task.controller.ts
@@ -1,10 +1,17 @@
-import { TaskPermissionDeniedError, NoKanbanStatusError } from './../exception/task.exception';
+import {
+  TaskPermissionDeniedError,
+  NoKanbanStatusError,
+  TaskCannotBackwardError,
+  TaskCannotForwardError,
+  TaskNotExistError
+} from './../exception/task.exception';
 import { HttpStatusCode } from './../constant/response-msg.constant';
 import {
   HttpSuccessResponse,
   HttpForbiddenResponse,
   HttpSystemErrorResponse,
-  HttpConflictResponse
+  HttpConflictResponse,
+  HttpNotFoundResponse
 } from './../middleware/http-response';
 import { TaskService } from './../service/task.service';
 import { Request, Response, NextFunction } from 'express';
@@ -25,6 +32,33 @@ export class TaskController {
 
       if (error instanceof NoKanbanStatusError) {
         next(new HttpConflictResponse(error.toString()));
+        return;
+      }
+
+      next(new HttpSystemErrorResponse(error.toString()));
+    }
+  }
+
+  static async moveTask(req: Request, res: Response, next: NextFunction) {
+    const { id, direction } = req.params;
+    const userId = req.user!.id;
+
+    try {
+      const info = await TaskService.moveTask(id, direction as any, userId);
+      next(new HttpSuccessResponse(info, HttpStatusCode.OK));
+    } catch (error) {
+      if (error instanceof TaskPermissionDeniedError) {
+        next(new HttpForbiddenResponse());
+        return;
+      }
+
+      if (error instanceof TaskCannotForwardError || error instanceof TaskCannotBackwardError) {
+        next(new HttpConflictResponse(error.toString()));
+        return;
+      }
+
+      if (error instanceof TaskNotExistError) {
+        next(new HttpNotFoundResponse());
         return;
       }
 
